--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@ body {
   color: #333;
 }
 
+ul {
+  list-style-type: none; /* Removes bullets from unordered lists */
+}
+
+ol {
+  list-style-type: none; /* Removes numbers from ordered lists */
+}
+
 /* Header */
 header {
   display: flex;
@@ -52,9 +60,10 @@ nav a {
  
 }
 
-about-wrapper {
+.about-wrapper {
   padding: 40px 20px;
   text-align: center;
+   list-style-type: none;
 }
 .products {
   padding: 40px 20px;
